Update grid to vary dimensions

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 .grid-container {
   display: grid;
-  grid-template-columns: repeat(6, 50px);
+  /* grid-template-columns: repeat(6, 50px); */
   grid-gap: 5px;
 }
 
